--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
                         <ion-icon name="person-circle"></ion-icon>
                     </span>
                     <input type="text" required>
-                    <label>Ussrname</label>
+                    <label>Username</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="mail-open"></ion-icon></span>
+                    <input type="email" required>
+                    <label>Email</label>
                 </div>
                 <div class="input-box">
                     <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
